--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
     "next": "^15.0.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -29,4 +32,3 @@
     "typescript": "^5.7.2"
   }
 }
-
