--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "^15.0.3",
     "postcss": "^8.4.49",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
   }
