Fix: Update config.yml to use decap branch and resolve package.json merge conflicts

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: vznlabdev/MonacoPI  # Update with your GitHub username/repo
-  branch: main  # Or your default branch name
+  branch: decap  # Changed to match current branch
 
 # Optional: Use local backend for development
 # To test locally: npx decap-server
